--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -19,7 +19,7 @@ $gutter: $grid-gutter-width
 // @import 'node_modules/bootstrap/scss/_utilities.scss' // Optional Bootstrap Utilites
 @import 'node_modules/slick-carousel/slick/slick.scss' // slick carousel
 @import 'node_modules/slick-carousel/slick/slick-theme.scss' // slick carousel
-@import 'node_modules/magnific-popup/src/css/main.scss' // slick carousel
+@import 'node_modules/magnific-popup/src/css/main.scss' // magnific-popup
 
 // FONTS LOAD SECTION
 
