--- a/app/styles/sass/blocks/_general.sass
+++ b/app/styles/sass/blocks/_general.sass
@@ -176,6 +176,7 @@ h3.container_title
     font-size: 42px
     line-height: 50px
     margin: 0 !important
+    color: $secondary
   p
     font-weight: 300
     font-size: 24px
